--- a/src/css/App.css
+++ b/src/css/App.css
@@ -66,7 +66,7 @@ span{
     height: .4rem;
     width: 100%;
     background-color: #3858cc;
-    pointer-events: all;
+    pointer-events: none;
     display: none;
     border-radius: 20px;
 }
