Changes: Fixed css and made required changes to showcase other things

--- a/src/css/Home.css
+++ b/src/css/Home.css
@@ -1,53 +1,37 @@
-*{
-    margin: 0%;
-    padding: 0%;
-    box-sizing: border-box;
+* {
+	margin: 0%;
+	padding: 0%;
+	box-sizing: border-box;
 }
-.HomePage{
-    position: absolute;
-    top: 50%;
-    left: 50%;
-    transform: translate(-50%, -50%);
-    width: 80%;
+.hero-text {
+	color: white;
+	text-align: center;
+	font-size: 3rem;
+	margin-bottom: 0.5rem;
 }
-.hero-text{
-    color: white;
-    text-align: center;
-    font-size: 3.5rem;
-}
-.hero-text > span{
-    color: #037FFF;
+.hero-text > span {
+	color: #7d03ff;
 }
 
-.h-sub-text{
-    text-align: center;
-    font-size: 2rem;
+.h-sub-text {
+	word-spacing: 0.25rem;
+	text-align: justify;
+	font-size: 1.5rem;
 }
-.icons{
-    display: flex;
-    align-items: center;
-    justify-content: center;
-    padding: 1.5rem 0;
+.icons {
+	display: flex;
+	align-items: center;
+	justify-content: center;
+	padding: 1.5rem 0;
 }
-.icon-holder{
-    margin-right: 1rem;
+.icon-holder {
+	margin-right: 1rem;
 }
-.icon{
-    font-size: 2.8rem;
-    color: #a4acc4;
-    transition: all .4s ease-in-out;
+.icon {
+	font-size: 2.8rem;
+	color: #a4acc4;
+	transition: all 0.4s ease-in-out;
 }
-.icon:hover{
-    color: #037FFF;
-}
-@media screen and (max-width: 1000px){
-    .HomePage{
-        top: 65%
-    }
-    .hero-text{
-        font-size: 2.5rem;
-    }
-    .h-sub-text{
-        font-size: 1.5rem;
-    }
+.icon:hover {
+	color: #7d03ff;
 }
