--- a/src/css/Contact.css
+++ b/src/css/Contact.css
@@ -1,73 +1,59 @@
-.ContactItem{
-    width: 100wh;
+.ContactItem:not(:last-child) {
+	margin-bottom: 1rem;
 }
-.ContactItem:not(:last-child){
-    margin-bottom: 1rem;
+.contact {
+	display: flex;
+	align-items: center;
+	background-color: #191d2b;
+	padding: 3rem;
 }
-.contact{
-    display: flex;
-    align-items: center;
-    background-color:#191D2B ;
-    padding: 3rem;
+.right-items {
+	margin-left: 2rem;
+	font-size: 1.25rem;
 }
-.right-items{
-    margin-left: 2rem;
+.right-items > h6 {
+	font-size: 1.5rem;
 }
-.right-items > h6{
-    font-size: 2rem;
-    font-weight: 500;
-}
-.right-items > p{
-    font-size: 1.5rem;
-}
-.contactPage{
-    display: grid;
-    grid-template-columns: repeat(2, 1fr);
+.contactPage {
+	display: grid;
+	margin-top: 2.5rem;
+	gap: 1rem;
+	grid-template-columns: repeat(2, 1fr);
 }
 
-.map-sect{
-    width: 97%;
-    padding: 1rem;
-    background-color:#191D2B;
+.right-items {
+	overflow: hidden;
+	text-overflow: ellipsis;
 }
-iframe{
-    width: 100%;
-    height: 100%;
+
+.map-sect {
+	width: 100%;
+	padding: 1rem;
+	background-color: #191d2b;
 }
-.contact-sect{
-    width: 100%;
-    display: flex;
-    justify-content: space-between;
-    flex-direction: column;
+iframe {
+	width: 100%;
+	height: 100%;
 }
-.ico{
-    font-size: 2.5rem;
+.contact-sect {
+	width: 100%;
+	display: flex;
+	justify-content: space-between;
+	flex-direction: column;
 }
-@media screen and (max-width: 950px){
-    .contactPage{
-        grid-template-columns: repeat(1, 1fr);
-        row-gap: 0.8rem;
-    }
-    .map-sect{
-        width: 100%;
-        padding: 1rem;
-        margin-top: 2rem;
-    }
-    .contact{
-        padding: 1rem;
-    }
-    .ico{
-        font-size: 2rem;
-    }
-    .right-items > h6{
-        font-size: 1.5rem;
-    }
-    .right-items > p{
-        font-size: 1rem;
-    }
+.ico {
+	font-size: 2.5rem;
 }
-@media screen and (max-width: 400px){
-    .contact{
-        padding: 0.5rem;
-    }
+@media screen and (max-width: 950px) {
+	.contactPage {
+		grid-template-columns: repeat(1, 1fr);
+	}
+	.map-sect,
+	.contact {
+		width: 90%;
+		padding: 1rem;
+	}
+	.ico {
+		font-size: 2rem;
+	}
 }
