--- a/src/css/MenuItem.css
+++ b/src/css/MenuItem.css
@@ -1,110 +1,94 @@
-.portfolis{
-    width: 100%;
-    display: grid;
-    grid-template-columns: repeat(3, 1fr);
-    row-gap: 2rem;
-    column-gap: 2rem;
+.portfolis {
+	width: 100%;
+	display: grid;
+	grid-template-columns: repeat(3, 1fr);
+	row-gap: 2rem;
+	column-gap: 2rem;
 }
-.hover-items{
-    list-style: none;
-    position: absolute;
-    top: 85%;
-    left: 50%;
-    transform: translate(-50%, -50%);
+.hover-items {
+	list-style: none;
+	position: absolute;
+	top: 85%;
+	left: 50%;
+	transform: translate(-50%, -50%);
 }
-.hover-items > li > a{
-    padding: 0.6rem;
-    text-decoration: none;
-    font-family: inherit;
-    border-radius: 10px;
-    background-color: #037FFF;
-    color: #a4acc4;
+.hover-items > li > a {
+	padding: 0.6rem;
+	text-decoration: none;
+	font-family: inherit;
+	border-radius: 10px;
+	background-color: #7d03ff;
+	color: #a4acc4;
 }
-.hover-items > li > a:hover{
-    background-color: #0381ff5b;
+.hover-items > li > a:hover,
+.btn-port:hover {
+	background-color: #a4acc4;
+	color: #7d03ff;
 }
-.hover-items > li > a:not(:last-child){
-    margin-right: 2rem;
+.hover-items > li > a:not(:last-child) {
+	margin-right: 2rem;
 }
-.portfolio > h5{
-    font-size: 2rem;
-    font-weight: 500;
-    color: #a4acc4;
-    text-align: center;
-    transition: all .3s ease-in-out;
-    padding: 0.5rem;
+.portfolio > h5 {
+	font-size: 1.5rem;
+	font-weight: 500;
+	color: #a4acc4;
+	text-align: center;
+	transition: all 0.3s ease-in-out;
+	padding: 0.5rem;
 }
-.portfolio > h5:hover{
-    color:  #037FFF;
-    cursor: pointer;
+.portfolio > h5:hover {
+	color: #7d03ff;
+	cursor: pointer;
 }
-.portfolio > p{
-    font-size: 1.5rem;
-    font-weight: 400;
-    color: #a4acc4;
+.portfolio > p {
+	font-size: 1rem;
+	font-weight: 400;
+	color: #a4acc4;
 }
-.image-data{
-    position: relative;
-    border: 2px solid #a4acc4;
-    padding: 0.5rem;
+.image-data {
+	position: relative;
+	border: 2px solid #a4acc4;
+	padding: 0.5rem;
 }
-.image-data::before{
-    content: "";
-    position: absolute;
-    top: 12px;
-    left: 15px;
-    height: calc(100% - 30px);
-    width: calc(100% - 30px);
+.image-data::before {
+	content: '';
+	position: absolute;
+	top: 12px;
+	left: 15px;
+	height: calc(100% - 30px);
+	width: calc(100% - 30px);
 }
-.btn-port{
-    padding: .6rem 2rem;
-    background-color: #0381ff5b;
-    border: none;
-    outline: none;
-    cursor: pointer;
-    font-size: inherit;
-    font-family: inherit;
-    color: #a4acc4;
-    margin-bottom: 1rem;
-    border-radius: 3px;
-    transition: all .3s ease-in-out;
+.btn-port {
+	padding: 0.6rem 2rem;
+	background-color: #7d03ff;
+	border: none;
+	outline: none;
+	cursor: pointer;
+	font-size: inherit;
+	font-family: inherit;
+	color: #a4acc4;
+	margin-bottom: 1rem;
+	border-radius: 3px;
+	transition: all 0.3s ease-in-out;
 }
-.btn-port:not(:last-child){
-    margin-right: 1rem;
+.btn-port:not(:last-child) {
+	margin-right: 1rem;
 }
-.btn-port:hover{
-    background-color: #037FFF;
+.buttons {
+	display: flex;
+	justify-content: center;
+	align-items: center;
+	margin: 2.5rem;
+	border-radius: 3px;
+	flex-wrap: wrap;
 }
-.btn-port:active{
-    background-color: #037FFF;
-}
-.btn-port:focus{
-    background-color: #037FFF;
-}
-.buttons{
-    display: flex;
-    justify-content: center;
-    align-items: center;
-    margin: 4rem 10rem;
-    border-radius: 3px;
-    flex-wrap: wrap;
-}
-@media screen and (max-width: 1270px){
-    .buttons{
-        margin: 2rem 5rem;
-    }
-    .portfolis{
-        grid-template-columns: repeat(2, 1fr);
-    }
-}
-@media screen and (max-width: 1100px){
-    .buttons{
-        margin: 2rem 2rem;
-    }
-}
-@media screen and (max-width: 750px){
-    .portfolis{
-        grid-template-columns: repeat(1, 1fr);
-        text-align: center;
-    }
+
+@media screen and (max-width: 950px) {
+	.buttons {
+		margin: 2.5rem 0.5rem 0.5rem 0.5rem;
+		justify-content: flex-start;
+	}
+	.portfolis {
+		grid-template-columns: repeat(1, 1fr);
+	}
 }
