--- a/src/css/Title.css
+++ b/src/css/Title.css
@@ -1,47 +1,44 @@
-.Title{
-    text-transform: uppercase;
-    font-size: 2rem;
-    color: white;
-    position: relative;
-    padding-bottom: 1rem;
-    letter-spacing: 3px;
+.Title {
+	text-transform: uppercase;
+	font-size: 2rem;
+	color: white;
+	position: relative;
+	padding-bottom: 1rem;
+	letter-spacing: 3px;
 }
-.Title::before{
-    content: "";
-    bottom: 0;
-    position: absolute;
-    left: 0;
-    background-color: #0381ff38;
-    width: 6rem;
-    height: .4rem;
-    border-radius: 50px;
-       
+.Title::before {
+	content: '';
+	bottom: 0;
+	position: absolute;
+	left: 0;
+	background-color: #0381ff38;
+	width: 6rem;
+	height: 0.4rem;
+	border-radius: 50px;
 }
-.Title::after{
-    content: "";
-    bottom: 0;
-    position: absolute;
-    left: 0;
-    background-color: #037FFF;
-    width: 3rem;
-    height: .4rem;
-    border-radius: 50px;
+.Title::after {
+	content: '';
+	bottom: 0;
+	position: absolute;
+	left: 0;
+	background-color: #7d03ff;
+	width: 3rem;
+	height: 0.4rem;
+	border-radius: 50px;
 }
-.Title > h3 > span{
-    position: absolute;
-    top: 15px;
-    left: 0;
-    font-size: 3rem;
-    opacity: 0.07;
+.Title > h3 > span {
+	position: absolute;
+	top: 15px;
+	left: 0;
+	font-size: 3rem;
+	opacity: 0.07;
 }
-@media screen and (max-width: 1100px){
-    .Title, .Title > h3 > span, .Title::before, .Title::after{
-        margin-left: 1rem;
-    }
-    .Title{
-        font-size: 1.5rem;
-    }
-    .Title > h3 > span{
-        font-size: 1.5rem;
-    }
+@media screen and (max-width: 950px) {
+	.Title > h3 > span {
+		margin-left: 1rem;
+	}
+	.Title,
+	.Title > h3 > span {
+		font-size: 1.5rem;
+	}
 }
