--- a/src/css/Skill.css
+++ b/src/css/Skill.css
@@ -1,44 +1,44 @@
-.skill-title {
-	font-size: 1.4rem;
-	font-weight: 400;
+.skill-title{
+    font-size: 1.4rem;
+    font-weight: 400;
 }
 
-.skill-bar {
-	display: flex;
-	align-items: center;
+.skill-bar{
+    display: flex;
+    align-items: center;
 }
-.skill-progress {
-	width: 100%;
+.skill-progress{
+    width: 100%;
 }
-.progress {
-	width: 100%;
-	height: 0.5rem;
-	margin-left: 1rem;
-	background-color: #0381ff3f;
-	position: relative;
-	border-radius: 3px;
+.progress{
+    width: 100%;
+    height: .5rem;
+    margin-left: 1rem;
+    background-color: #0381ff3f;
+    position: relative;
+    border-radius: 3px;
 }
-.inner-pregress {
-	position: absolute;
-	background-color: #7d03ff;
-	height: 100%;
-	bottom: 0;
-	left: 0;
-	border-radius: 3px;
+.inner-pregress{
+    position: absolute;
+    background-color: #037FFF;
+    height: 100%;
+    bottom: 0;
+    left: 0;
+    border-radius: 3px;
 }
 
-.skillsContainer {
-	display: grid;
-	grid-template-columns: repeat(2, 1fr);
-	column-gap: 4rem;
-	row-gap: 1rem;
-	margin: 2.5rem 0;
+.skillsContainer{
+    display: grid;
+    grid-template-columns: repeat(2, 1fr);
+    column-gap: 4rem;
+    row-gap: 1rem;
+    margin: 4rem 0;
 }
-@media screen and (max-width: 950px) {
-	.skillsContainer {
-		grid-template-columns: repeat(1, 1fr);
-	}
-	.progress {
-		margin-left: 0.5rem;
-	}
+@media screen and (max-width: 1100px){
+    .skillsContainer{
+    grid-template-columns: repeat(1, 1fr);
+    }
+    .progress{
+        margin-left: 0.5rem;
+    }
 }
