--- a/src/css/Services.css
+++ b/src/css/Services.css
@@ -1,5 +1,5 @@
 .ServicesSection {
-	width: 50%;
+	width: 100%;
 }
 .service {
 	width: 100%;
@@ -43,34 +43,18 @@
 	padding-bottom: 1rem;
 	margin: 1rem 0;
 }
-.s-title::after {
-	content: '';
-	position: absolute;
-	bottom: 0;
-	left: 0;
-	width: 30%;
-	height: 1px;
-	background-color: #2e344e;
-}
 .servives-container {
 	display: flex;
+	flex-direction: column;
 	gap: 1rem;
 	width: 100%;
-	justify-content: space-between;
 	margin: 2.5rem 0;
 }
 
 @media screen and (max-width: 950px) {
 	.service {
+		min-height: unset;
 		width: 100%;
 		margin-bottom: 1rem;
-	}
-	.servives-container {
-		flex-direction: column;
-		grid-gap: unset;
-		gap: unset;
-	}
-	.ServicesSection {
-		width: 100%;
 	}
 }
